--- a/src/app/components/lista/lista.component.html
+++ b/src/app/components/lista/lista.component.html
@@ -20,7 +20,7 @@
             <i class="fas fa-tag icons-size" [ngStyle]="{'color': tag}"></i>
             </button>
 
-            <div class="d-flex justify-content-between mt-3">
+            <div class="d-flex justify-content-between justify-content-md-center mt-3">
                 <i class="fas fa-square" id="tag0" (click)="seleccionarTag('#ffffff')"></i>
                 <i class="fas fa-square mx-2" id="tag1" (click)="seleccionarTag('#c7c700b3')"></i>
                 <i class="fas fa-square" id="tag2" (click)="seleccionarTag('#ff0000b3')"></i>
@@ -74,9 +74,9 @@
             <mat-checkbox name="Terminado" [(ngModel)]="item.terminado" (change)="editarItem(i , item , 2 )">
             </mat-checkbox>
 
-            <div [ngClass]="{'check': item.terminado}" (click)='editarItem(i , item , 0)'>{{ item.nombre }}</div>
+            <div class="pointer" [ngClass]="{'check': item.terminado}" (click)='editarItem(i , item , 0)'>{{ item.nombre }}</div>
 
-            <div [ngClass]="{'check': item.terminado}" (click)='editarItem(i , item , 1)'>{{ item.cantidad }}{{ item.unidad }}</div>
+            <div class="pointer" [ngClass]="{'check': item.terminado}" (click)='editarItem(i , item , 1)'>{{ item.cantidad }}{{ item.unidad }}</div>
 
             <div *ngIf="item.terminado">
 
@@ -94,7 +94,7 @@
 
         </div>
 
-        <google-map [center]="latLng" width="100%" height="240px">
+        <google-map [center]="latLng" width="100%">
             <map-marker [position]="latLng" [title]="title">
             </map-marker>
         </google-map>
