--- a/src/app/components/listas/listas.component.html
+++ b/src/app/components/listas/listas.component.html
@@ -2,7 +2,7 @@
 
     <div class="row justify-content-between pt-3 px-3" [ngClass]="{'alternate-theme': alternar}">
 
-        <h1>¡ Hola {{ nombreUsuario }} !</h1>
+        <h1 class="sm-title">¡ Hola {{ nombreUsuario }} !</h1>
 
         <button mat-mini-fab (click)='disconect()' color='accent'>
     
@@ -20,7 +20,7 @@
 
     <div class="mt-5 mb-4" *ngIf="noCargando">
 
-        <div class="row justify-content-around mb-3">
+        <div class="row justify-content-around justify-content-md-center mb-3">
 
             <div class="d-flex justify-content-center" (click)='downPend = !downPend' data-toggle='collapse' data-target='#pendientes'>
 
@@ -30,7 +30,7 @@
 
             </div>
 
-            <div [ngClass]="{'alternate-theme': alternar}">
+            <div class="margin-crear" [ngClass]="{'alternate-theme': alternar}">
 
                 <button mat-mini-fab (click)="crearLista()" color='primary'>
                             
@@ -60,7 +60,7 @@
 
                             <mat-checkbox class="pt-1" [(ngModel)]="lista.terminada" (change)='cambiarCheck(lista.listaId , lista.terminada)'></mat-checkbox>
 
-                            <div [ngClass]="{'check': lista.terminada}" (click)="abrirLista(i , lista.terminada)" class="mx-2"> {{ lista.title }}<i class="fas fa-tag ml-1" [ngStyle]="{'color': lista.tag}"></i></div>
+                            <div class="pointer" (click)="abrirLista(i , lista.terminada)"> {{ lista.title }} <i class="fas fa-tag ml-1" [ngStyle]="{'color': lista.tag}"></i></div>
 
                             <div [ngClass]="{'alternate-theme': alternar}">
 
@@ -90,7 +90,7 @@
                             </div>
 
 
-                            <div [@finished] [ngClass]="{'check': lista.terminada}" (click)="abrirLista(i , lista.terminada)" class="ml-2"> {{ lista.title }} <i class="fas fa-tag" [ngStyle]="{'color': lista.tag}"></i></div>
+                            <div [@finished] [ngClass]="{'check': lista.terminada}" (click)="abrirLista(i , lista.terminada)"> {{ lista.title }} <i class="fas fa-tag" [ngStyle]="{'color': lista.tag}"> </i></div>
 
                             <div [ngClass]="{'alternate-theme': alternar}">
 
@@ -122,7 +122,7 @@
 
             <div class="modal-content">
 
-                <google-map (mapClick)="ubicarMarcador($event)" [center]="center" width="100%" height="240px">
+                <google-map (mapClick)="ubicarMarcador($event)" [center]="center" width="100%">
 
                     <map-marker *ngIf="marcadorIndex !== undefined" [position]='marcadorIndex'>
                     </map-marker>
@@ -133,7 +133,7 @@
         </div>
     </div>
 
-    <google-map *ngIf="noCargando" [center]="center" width="100%" height="240px">
+    <google-map *ngIf="noCargando" [center]="center" width="100%">
 
         <map-marker *ngFor="let lista of listas , let i=index" [position]="lista.latLng" [title]="lista.title" (mapClick)="abrirLista(i , lista.terminada)">
         </map-marker>
