--- a/src/app/components/lista/lista.component.html
+++ b/src/app/components/lista/lista.component.html
@@ -1,6 +1,6 @@
-<div class="container flipInY">
+<div class="container flipInY mt-3">
 
-    <div class="row align-items-center">
+    <div class="row align-items-center mb-2">
 
         <div class="col-2">
 
