--- a/src/app/components/listas/listas.component.html
+++ b/src/app/components/listas/listas.component.html
@@ -6,7 +6,7 @@
 
         <button mat-mini-fab (click)='disconect()' color='accent'>
     
-                    <i id="rotame" class="fas fa-sign-out-alt icons-size" ></i>
+                    <i  class="fas fa-sign-out-alt icons-size" ></i>
     
                 </button>
     </div>
