--- a/src/app/components/sign-in/sign-in.component.html
+++ b/src/app/components/sign-in/sign-in.component.html
@@ -18,7 +18,7 @@
 
             </mat-form-field>
 
-            <div style="color: red;">{{ errorEmail }}</div>
+            <div style="color: red;">{{ emailErrorMessage }}</div>
 
         </form>
     </div>
@@ -35,7 +35,7 @@
 
             </mat-form-field>
 
-            <div style="color: red;">{{ errorPass }}</div>
+            <div style="color: red;">{{ passwordErrorMessage }}</div>
 
         </form>
     </div>
